--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+
+    //swipe refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
