--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     //lifecycle/view model/coroutine
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     // Testing dependencies
@@ -75,7 +75,6 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.3.0"
     androidTestImplementation "androidx.test.ext:junit:1.1.2"
     androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
-    androidTestImplementation "androidx.work:work-testing:2.4.0"
     androidTestImplementation "com.google.truth:truth:0.42"
     testImplementation "junit:junit:4.13.1"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
@@ -84,7 +83,7 @@ dependencies {
     debugImplementation("androidx.fragment:fragment-testing:1.3.0-beta02")
 
     //pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha10"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha11"
 
     //Retrofit and Okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
@@ -104,4 +103,7 @@ dependencies {
 
     //swipe refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    //get Dominant image color
+    implementation 'androidx.palette:palette-ktx:1.0.0'
 }
