--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,13 +42,11 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.cardview:cardview:1.0.0'
-    def nav_version = "2.3.2"
+    def nav_version = "2.3.3"
     def recyclerview = "1.2.0-beta01"
     def lifecycle = "2.2.0"
 
-
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -58,6 +56,7 @@ dependencies {
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0-alpha03'
 
 
     //recyclerview
@@ -80,10 +79,10 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.28.3-alpha"
     implementation "com.squareup.okhttp3:mockwebserver:4.7.2"
-    debugImplementation("androidx.fragment:fragment-testing:1.3.0-beta02")
+    debugImplementation("androidx.fragment:fragment-testing:1.3.0-rc02")
 
     //pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha11"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha13"
 
     //Retrofit and Okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
@@ -96,10 +95,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //dagger hilt
-    implementation "com.google.dagger:hilt-android:2.28.3-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    implementation 'com.google.dagger:hilt-android:2.31-alpha'
+    kapt 'com.google.dagger:hilt-android-compiler:2.30-alpha'
+
+    // Hilt Jetpack Integrations
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha03'
 
     //swipe refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
