--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,9 @@ dependencies {
     def lifecycle = "2.2.0"
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //navigation
@@ -62,10 +61,10 @@ dependencies {
     //recyclerview
     implementation "androidx.recyclerview:recyclerview:$recyclerview"
 
-    //lifecycle/view model/coroutine
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+
 
     // Testing dependencies
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
@@ -79,10 +78,10 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.28.3-alpha"
     implementation "com.squareup.okhttp3:mockwebserver:4.7.2"
-    debugImplementation("androidx.fragment:fragment-testing:1.3.0-rc02")
+    debugImplementation("androidx.fragment:fragment-testing:1.3.0")
 
     //pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha13"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta01"
 
     //Retrofit and Okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
@@ -96,7 +95,7 @@ dependencies {
 
     //dagger hilt
     implementation 'com.google.dagger:hilt-android:2.31-alpha'
-    kapt 'com.google.dagger:hilt-android-compiler:2.30-alpha'
+    kapt 'com.google.dagger:hilt-android-compiler:2.31-alpha'
 
     // Hilt Jetpack Integrations
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
@@ -104,6 +103,10 @@ dependencies {
 
     //swipe refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    //Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.30"
 
     //get Dominant image color
     implementation 'androidx.palette:palette-ktx:1.0.0'
