--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.3.3"
-    def recyclerview = "1.2.0-beta01"
+    def nav_version = "2.3.4"
+    def recyclerview = "1.2.0-rc01"
     def lifecycle = "2.2.0"
 
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -55,15 +55,15 @@ dependencies {
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0-alpha03'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0-beta01'
 
 
     //recyclerview
     implementation "androidx.recyclerview:recyclerview:$recyclerview"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
 
     // Testing dependencies
@@ -78,10 +78,10 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.28.3-alpha"
     implementation "com.squareup.okhttp3:mockwebserver:4.7.2"
-    debugImplementation("androidx.fragment:fragment-testing:1.3.0")
+    debugImplementation("androidx.fragment:fragment-testing:1.3.2")
 
     //pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta01"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta03"
 
     //Retrofit and Okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
@@ -94,20 +94,20 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.31.1-alpha'
-    kapt 'com.google.dagger:hilt-android-compiler:2.31.1-alpha'
+    implementation 'com.google.dagger:hilt-android:2.33-beta'
+    kapt 'com.google.dagger:hilt-android-compiler:2.33-beta'
 
     // Hilt Jetpack Integrations
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-beta01'
 
     //swipe refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     //Datastore
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha07"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
 
     //get Dominant image color
     implementation 'androidx.palette:palette-ktx:1.0.0'
