--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,16 @@
 buildscript {
     ext {
         kotlin_version = "1.4.21-2"
-        navigationVersion = "2.3.0"
+        navigationVersion = "2.3.4"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.31.1-alpha'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.33-beta'
         classpath 'com.google.gms:google-services:4.3.5'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
